[gd_scene load_steps=11 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/player/player.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/player/outline.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/player/shield_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/player/shield.png" type="Texture" id=5]
[ext_resource path="res://shield_charge.gd" type="Script" id=6]
[ext_resource path="res://player_sprite.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.2433, 16.5711 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.0543, 16.3213 )

[sub_resource type="CircleShape2D" id=3]
radius = 27.389

[node name="player" type="KinematicBody2D"]
position = Vector2( 392.062, 290.241 )
collision_layer = 2
collision_mask = 30
script = ExtResource( 1 )

[node name="player_outline" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 3 )

[node name="player_sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -16, -16 )
script = ExtResource( 7 )

[node name="player_move_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="player_hitbox" type="Area2D" parent="."]

[node name="player_hitbox_shape" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource( 2 )

[node name="shield" type="Area2D" parent="."]
collision_mask = 20

[node name="Sprite" type="Sprite" parent="shield"]
texture = ExtResource( 5 )

[node name="shield_collide_shape" type="CollisionShape2D" parent="shield"]
shape = SubResource( 3 )

[node name="shield_charge_bar" type="TextureProgress" parent="shield"]
margin_left = -27.0
margin_top = -27.0
margin_right = 28.0
margin_bottom = 28.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 5
tint_under = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grav_cd_timer" type="Timer" parent="."]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_entered" from="shield" to="." method="_on_shield_body_entered"]
[connection signal="timeout" from="grav_cd_timer" to="." method="_on_grav_cd_timer_timeout"]
